# JNP_testy

./: LICENSE.md  README.md
.github/workflows/: main.yml
01_top7/: test.sh
01_top7/kwasow/: incorrect.err  incorrect.in  malformed.err  malformed.in
01_top7/official/: test_1.err  test_1.in  test_1.out  test_error.err  test_error.in  test_error.out  test_long.err  test_long.in  test_long.out  test_misc_a.err  test_misc_a.in  test_misc_a.out  test_misc_b.err  test_misc_b.out  test_white.err  test_white.in  test_white.out
01_top7/rentib/: .gitattributes
01_top7/rentib/simple/: 0.err  0.in  1.out  10.err  10.in  10.out  11.err  11.in  11.out  12.err  12.in  13.err  13.in  13.out  14.err  14.in  14.out  15.err  15.in  15.out  16.err  16.in  16.out  17.err  17.in  17.out  18.err  18.in  18.out  19.err  19.in  19.out  2.err  2.in  2.out  20.err  20.in  20.out  21.err  21.in  (+231 more)
01_top7/wojsza/: wg1.err  wg1.in  wg1.out  wg2.in  wg2.out  wg3.in  wg3.out  wg4.err  wg4.in  wg4.out  wg5.err  wg5.in  wg5.out  wg6.err  wg6.in  wg6.out
02_hash/: .gitignore  CMakeLists.txt  test.sh
02_hash/official/: hash_test1.c  hash_test1.err  hash_test2.cc  hash_test2.err
02_hash/tests/: CppTests.cc  basic_cpp_test.cc  complex_cpp_example.cc  example.cc  kwasow.cc  main.cc  official.cc
03_moneybag/: .gitignore  CMakeLists.txt  moneybag_example.cc  rentib.cc  test.sh
03_moneybag/tests/: official.cc  rentib.cc
04_organism/: main.cc  organism_example.cc  organism_more_examples.cc
05_kvfifo/: alloc_fail.cc  alloc_fail.h  kvfifo_test.cc  kvfifo_test.h  kwasow.h
06_worldcup/: scoreboard.h  test.cc  test.sh  test_dice.h  tests.h  worldcup.h
07_images/: .gitignore  CMakeLists.txt  README.md  bmp.h  coordinate.cc  coordinate.h  diff_bmp.cc  example.cc  fib_test.h  image_test.sh  test.py  test.sh
07_images/src/: CMakeLists.txt  bmp.cc  bmp.h  color.cc  color.h  example.cc  fib_test.h  test.cc
Testy karambo/: 1.in  1.out  2.in  2.out
